# kaltura-client-rs

./: Cargo.toml  README.md
src/: crypto.rs  lib.rs  models.rs  service.rs
src/models/: session.rs  uiconf.rs
src/service/: system.rs  uiconf.rs
