[package]
name = "kaltura-client-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha1 = "0.10.6"
hex = "0.4.2"
base64 = "0.22.0"
reqwest = { version = "0.11.25", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde_qs = "0.12.0"
urlencoding = "2.1.3"
rand = "0.8.5"
aes = "0.8.4"
cbc = "0.1.2"

[dev-dependencies]
tokio-test = "0.4.3"